--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install mkdocs
+          pip install mkdocstrings
           pip install mkdocs-material
 
       - name: Build site
