--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,10 @@ jobs:
       - name: Install dependencies
         run: |
           pip install mkdocs
-          pip install mkdocstrings
+          pip install mkdocstrings-python
+          pip install mkdocsstrings
+          pip install mkdocs-autofefs
+          pip install pymdown-extensions
           pip install mkdocs-material
 
       - name: Build site
