--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           pip install mkdocs
           pip install mkdocstrings-python
-          pip install mkdocsstrings
+          pip install mkdocstrings
           pip install mkdocs-autofefs
           pip install pymdown-extensions
           pip install mkdocs-material
