--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           cd docs
           mkdocs build
+          mkdocs gh-deploy --force
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
